@@ -1,3 +1,7 @@
+2006-07-13  Paolo Carlini  <pcarlini@suse.de>
+
+	* testsuite/performance/21_strings/string_copy_cons_and_dest.cc: New.
+
 2006-07-13  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* include/Makefile.am (pch*_output_anchor): Add.
